--- a/packages/web-frontend/src/app/Terminal/Contents/AnimatedLogo/index.module.css
+++ b/packages/web-frontend/src/app/Terminal/Contents/AnimatedLogo/index.module.css
@@ -1,2 +1,71 @@
 .container {
+    border: 1px solid #d3d3d3;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.contents {
+    --logo-text-size: 48px;
+
+    display: flex;
+    position: relative;
+    aspect-ratio: 10 / 7;
+    align-items: flex-end;
+}
+
+.foreground {
+    font-size: var(--logo-text-size);
+}
+
+.background {
+    font-size: calc(var(--logo-text-size) / 4);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    word-break: break-all;
+    overflow: hidden;
+    color: #ccc;
+    z-index: -1;
+}
+
+.bar {
+    display: flex;
+    width: 100%;
+    height: 30px;
+    background-color: #d3d3d3;
+    align-items: center;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
+.button {
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    margin-right: 5px;
+    flex-shrink: 0;
+}
+
+.button:nth-child(1) {
+    background-color: #f46f48;
+}
+
+.button:nth-child(2) {
+    background-color: #edaa2d;
+}
+
+.button:nth-child(3) {
+    background-color: #7cc439;
+    margin-right: 10px;
+}
+
+.title {
+    text-align: center;
+    flex-grow: 1;
+    font-size: 14px;
+    color: #333;
+    box-sizing: border-box;
+    user-select: none;
 }
