Make prompt stick to bottom of screen.

--- a/packages/web-frontend/src/app/Terminal/index.module.css
+++ b/packages/web-frontend/src/app/Terminal/index.module.css
@@ -1,4 +1,15 @@
 .terminal {
+    display: flex;
+    flex-direction: column;
     margin: 10px;
     line-height: 1.3;
+}
+
+.entries {
+    flex-grow: 1;
+}
+
+.prompt {
+    position: sticky;
+    bottom: 0;
 }
